Fix socials spacing
Changed the spacing method from using margins to
using the gap property

--- a/css/style.css
+++ b/css/style.css
@@ -320,14 +320,12 @@ footer {
 }
 
 footer .socials ul {
+  margin: 10px 0px;
   display: flex;
   list-style: none;
   flex-flow: row nowrap;
   justify-content:space-between;
-}
-
-footer .socials ul li {
-  margin: 10px;
+  gap: 20px;
 }
 
 footer .socials ul li a {
